-
Bug
-
Resolution: Fixed
-
P2: Important
-
Qt Creator 8.0.0
My project: all the sources are in the 'src' folder nested in the project folder (Project/src).
With Qt Creator 8.0 I get clangd warnings: Included Header header.h is not used (fix available).
And this is the wrong response from clangd because those headers are being used in source files!!!
We have %LocalAppData%\clangd\config.yaml - general clangd config file:
- This file was generated by Qt Creator and will be overwritten unless you remove this line.
Hover:
ShowAKA: Yes
Diagnostics:
UnusedIncludes: Strict
And we shouldn't edit this file.
To avoid this clangd warning I edit config.yaml and make it read-only:
Hover:
ShowAKA: Yes
Diagnostics:
UnusedIncludes: None
And the clangd warnings disappear! But, this is not good way!
I tried to create '.clangd' file inside project with the same content but it does not work (clangd does not has any reactions on this file).
What's wrong?! Please, assist me to resolve this problem!
| For Gerrit Dashboard: QTCREATORBUG-27965 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 424350,2 | CppEditor: Re-word misleading help text about clangd config files | master | qt-creator/qt-creator | Status: MERGED | -1 | 0 |