CppEditor: Re-word misleading help text about clangd config files

Task-number: QTCREATORBUG-27965
Change-Id: Ic41cea9b7383ab4b7c8fa76a6d67f6221cd49fdd
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: David Schulz <david.schulz@qt.io>